--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.12.17",
     "google-map-react": "^2.2.1",
     "lightbox2": "^2.11.4",
     "lightgallery": "^2.7.1",
@@ -13,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-image-gallery": "^1.2.12",
+    "react-intersection-observer": "^9.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
